fixing error with the backBtn.WIP

--- a/src/index.scss
+++ b/src/index.scss
@@ -365,7 +365,7 @@ button {
 ============================================*/
 
 .fadeOut{
-    animation: fadeOut 600ms linear;
+    animation: fadeOut 600ms linear;/*600ms*/
     animation-fill-mode: forwards;    
 }
 
