ScoreBoard animation added

--- a/src/index.scss
+++ b/src/index.scss
@@ -375,7 +375,7 @@ button {
 }
 
 .fadeIn{ 
-    display: block;
+    display: inline-block;
     animation: fadeIn 1s linear;
     animation-fill-mode: forwards;    
 }
