--- a/src/index.scss
+++ b/src/index.scss
@@ -401,6 +401,11 @@ button {
    100% {top: -45px;} 
 }
 
+.hidePlayerAnimation{
+  animation: fadePlayerPrompt 500ms linear;
+  animation-fill-mode: forwards;
+}
+
 @keyframes fadePlayerPrompt {
    0%{ top: -45px;}
    100% {top: 0px;} 
